--- a/stylesheets/structures.css
+++ b/stylesheets/structures.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #0A0A0A;
+	background-color: #1a1a1a;
 	color: white;
 }
 
@@ -48,6 +48,17 @@ nav ul li a:hover{
 
 a {
 	text-decoration: none;
+	color: white;
+}
+
+section a {
+	text-decoration: none;
+	color: blue;	
+}
+
+footer a {
+	text-decoration: none;
+	color: blue;
 }
 
 section {
